--- a/Cookbook.Rmd
+++ b/Cookbook.Rmd
@@ -11,6 +11,10 @@ One of the most exciting areas in all of data science right now is wearable comp
 
 http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones 
 
+Here are the data for the project: 
+
+https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip
+
 # Tidy Data Set Information 
 The tidy data set contains the following features
 
